--- a/backend/static/styles/index.css
+++ b/backend/static/styles/index.css
@@ -22,24 +22,24 @@ header{
     background-size: 10px 10px, auto;
     border-bottom: #FFD0BC 3px ridge;
 }
-#navigation ul{
+header ul{
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: row-reverse;
     justify-content:left;
 }
-#navigation li{
-    width: 50%;
+header li{
+    
     text-align: center;
     
-    padding: 30px;
+    padding: 20px;
     display: block;
     border-radius: 5px;
     list-style-type: none;
 
 }
-#navigation a{
+header a{
     margin: 10px;
     text-decoration: none;
     padding: 10px;
@@ -71,7 +71,7 @@ main{
 
 fieldset{
     width: 500px;
-    border:1px solid #cdd6f4;
+    border:2px solid #875f6b;
     border-radius: 6px;
 }
 
