--- a/templates/feed.html
+++ b/templates/feed.html
@@ -4,55 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/feed.css">
-    <title>Dashboard</title>
+    <title>Feed</title>
 </head>
 <body>
-    <header>
-        <ul>
-            <li><a href="/profile">Account</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/feed">Feed</a></li> 
-        </ul>
-        
-    </header>
-    <main>
-        <section>
-            <h2>{{alert}}</h2>
-            <div id="blog-list">
-                
-                {% for post in blogs %}
-                
-                    <div class="blog-post">
-                    <div class="username" style="text-align:center;">
-                        <h3 style="margin-top:0; text-align:center;">{{post.username}}</h3>
-                        <p style="color:grey; margin-bottom:0px;">{{post.to_dict().time}}</p>
-                        <p style="color:grey; margin-bottom:0px;">{{post.to_dict().date}}</p>
-                        
-                    </div>
-                    <div class="content">
-                        <h3 style="margin-top:0;">{{post.title}}</h3>
-                        <p style="margin:0; text-align:left;">{{post.content}}</p>
-                    </div>
-                    </div>
-                    
-                {% endfor %}
-                    
-            </div>
-            <div id="stats">
-                <fieldset>
-                    <legend>Page Stats</legend>
-                    
-                    <p>Total Blogs: <span id="total_posts" style="color:red;"></span></p>
-                </fieldset>
-            </div>
-        </section>
-        
-    </main>
     
+    <nav>
+        <ul>
+            <li><a href="/dashboard">Home</a></li>
+            <li id="selected"><a href="/feed">Feed</a></li> 
+            <li><a href="/profile">Profile</a></li>
+ 
+        </ul>
+    </nav>
+    <main>
+        <section class="content">
+            {% for post in blogs %}
+                <div class="contentcontainer">
+                    <div class="leftcontent">
+                        <h3>{{post.username}}</h3>
+                        <img src={{post.to_dict().pfp}}>
+                        <p>{{post.to_dict().time}}</p>
+                        <p>{{post.to_dict().date}}</p>
+                    </div>
+                    <div class="rightcontent">
+                        <h3>{{post.title}}</h3>
+                        <p>{{post.content}}</p>
+                    </div>
+                </div>
+            {% endfor %}
+            
+
+        </section>
+        <section class="usercontainer">
+            <h3>Users</h3>
+            <div id="user-list">
+                
+            </div>
+        </section> 
+    </main>
+
+
+    <footer></footer>
     <script>
-        let blogs = document.querySelectorAll(".blog-post");
-        let num_posts = blogs.length;
-        let total = document.querySelector("#total_posts").textContent = num_posts;
+        let user;
+        fetch("https://neko-blogs-a52478cbe33c.herokuapp.com/users")
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+                return response.json(); // Parse the JSON response
+            })
+            .then(users => {
+                const userList = document.getElementById("user-list");
+                
+                // Iterate through the users and display them
+                users.forEach(user => {
+                    let userDiv = document.createElement("div");
+                    
+                    
+                    userDiv.innerHTML = `
+                    
+                    <div class="profile">
+                    <div class="pfp">
+                        <img src="${user.pfp}">
+                    </div>
+                    <div class="info">
+                        <p style="margin-top:0;">${user.username}</p>
+                    </div>
+                    </div>
+                    
+                    
+                    
+                    `
+                    
+                    userList.appendChild(userDiv);
+                });
+            
+            })
+            .catch(error => {
+                console.error("Error fetching users:", error);
+            });
+            
     </script>
 </body>
 </html>
