--- a/static/styles/dash.css
+++ b/static/styles/dash.css
@@ -21,12 +21,14 @@ body{
     margin: 0 auto;
 }
 header{
-    width: 100%;
+    margin: 0 auto;
+    width: 1000px;
     height: 180px;
     border-bottom: 1px solid var(--accentColor);
-    background-image: linear-gradient(to right, #ccc 1px, transparent 1px),
-    linear-gradient(to bottom, #ccc 1px, transparent 1px);
-    background-size: 50px 50px;
+    background-image: url(../assets/IMG_2486.png);
+    background-repeat: no-repeat;
+    
+    background-size: 1000px 300px;
 }
 nav{
     
@@ -74,9 +76,9 @@ main{
     display: flex;
     flex-direction: row;
     margin: 0 auto;
+    min-height: 100%;
     
     
-    height: 100%;
 }
 code{
     font-family: monospace;
