--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -74,7 +74,7 @@ main{
     display: flex;
     flex-direction: row;
     margin: 0 auto;
-    height: 100%;
+    min-height: 100%;
 }
 .content{
     width: 85%;
