--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,6 +19,7 @@
     <main>
         <section class="content">
             <div class="contentcontainer">
+                <h4 style="color: red;">*Attention: this is a demo release the database will be wiped periodically every 24hrs</h4>
                 <h1>About this Project</h1>
                 <p>Welcome to Neko Blogs, a platform designed to simplify the way you create, manage, and share your thoughts through microblogging. Our mission is to empower individuals to effortlessly maintain a personal blog without the hassle of manually editing HTML or relying on static site generators.</p>
                 <p>With Neko Blogs, you can easily create and manage your blog posts directly through your account. But thats not all—weve built a powerful API that allows you to seamlessly integrate your blog data into your personal website. Simply use the API to fetch your blog content and display it dynamically, ensuring your site stays up-to-date without ever touching a line of code.</p>
@@ -51,7 +52,6 @@
                               }
                             ],
                             "user": {
-                              "email": "johndoe@gmail.com",
                               "id": 1,
                               "site_url": "None",
                               "username": "johndoe"
