Fixed Registration Page

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -64,6 +64,7 @@
             <div class="contentcontainer">
                 <h3>Change Log</h3>
                 <ul>
+                    <li>[3 Feb, 2025] Made website optional when creating an account</li>
                     <li>[1 Feb, 2025] Created a new layout of the site and added documentation</li>
                     <li>[31 Jan, 2025] Added a new domain for the site</li>
                     <li>[24 Jan, 2025] Finished basic functionality of the backend</li>
