--- a/templates/register.html
+++ b/templates/register.html
@@ -33,7 +33,7 @@
                 <input name="email" id="email" type="email" placeholder="email"  required>
                 <br><br>
                 <label for="site_url">Site:</label>
-                <input name="site_url" id="site_url" type="text" placeholder="site url"  required>
+                <input name="site_url" id="site_url" type="text" placeholder="website (optional)">
                 <br><br>
                 <p style="color: red;">{{message}}</p>
                 <button id="submit" type="submit">Submit</button>
