--- a/templates/feed.html
+++ b/templates/feed.html
@@ -65,14 +65,18 @@
                     
                     userDiv.innerHTML = `
                     
+                     <a style="color:white; text-decoration:none;" href="${user.site_url}">
                     <div class="profile">
+                    
                     <div class="pfp">
                         <img src="${user.pfp}">
                     </div>
                     <div class="info">
                         <p style="margin-top:0;">${user.username}</p>
                     </div>
+                    
                     </div>
+                    </a>
                     
                     
                     
